# PINN-HRF-fMRI

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: README.md  pinn_default.json
data/: README.md
docs/: project_evolution.md
notebooks/: 01_verificacion_datos.ipynb  02_glm_baseline.ipynb  03_validacion_sintetica.ipynb  04_glm_sintetico.ipynb  05_mlp_sintetica.ipynb  06_pinn_sintetica_piloto.ipynb  06b_pinn_inversa_ventana.ipynb  07_pinn_sintetica_lote.ipynb  08_comparacion_sintetica.ipynb  09_preparacion_datos_reales.ipynb  10_modelos_reales_piloto.ipynb  11_modelos_reales_lote.ipynb  12_analisis_final_experimentos.ipynb  README.md
report/: README.md  main.tex  references.bib
report/sections/: 00_glosario.tex  00_resumen.tex  01_introduccion.tex  02_fundamentos.tex  03_datos.tex  03_datos_reales.tex  04_datos_sinteticos.tex  04_metodologia.tex  05_desarrollo_metodologico.tex  05_implementacion.tex  06_experimentos.tex  06_implementacion.tex  07_diseno_experimental.tex  07_resultados_sinteticos.tex  08_resultados_reales.tex  08_resultados_sinteticos.tex  09_discusion.tex  09_resultados_reales.tex  10_conclusiones.tex  10_discusion.tex  11_conclusiones.tex  A_ecuaciones_perdidas.tex  A_reproducibilidad.tex  B_referencias.tex  B_tablas_completas.tex  C_figuras_adicionales.tex  D_reproducibilidad.tex  E_trazabilidad_notebooks.tex  F_referencias.tex
report/tables/: pinn_synthetic_metrics.csv  pinn_synthetic_summary.csv  real_friedman_tests.csv  (+5 more)
results/: README.md
scripts/: audit_repository.py
tests/: test_balloon_windkessel.py
(+20 files in other folders)
